# torch-ivf

./: .gitignore  AGENTS.md  README.ja.md  README.md  main.py  package-lock.json  pyproject.toml  rocm_test2.py  rocm_test3.py  rocm_test4.py
benchmarks/: benchmarks.jsonl  env.json
docs/: architecture.md  concept.md  plan.md  spec.md  tutorial.en.md  tutorial.ja.md  tutorial.md
examples/: ivf_demo.py
scripts/: benchmark.py  benchmark_faiss_cpu.py  benchmark_sweep_auto_threshold.py  benchmark_sweep_candidate_budget.py  benchmark_sweep_max_codes.py  benchmark_sweep_nq.py  dump_env.py  profile_ivf_search.py  score_auto_threshold.py
src/torch_ivf/: __init__.py
src/torch_ivf/index/: __init__.py  base.py  flat.py  ivf_flat.py
src/torch_ivf/nn/: __init__.py  kmeans.py
src/torch_ivf/utils/: __init__.py
tests/: test_benchmark.py  test_env.py  test_examples.py  test_import.py  test_index_base.py  test_index_flat.py  test_index_ivf_flat.py  test_kmeans.py
